<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Abheda ED</string>
    <string name="abheda_courses">Abheda Courses</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="lessons">Lessons</string>
    <string name="quiz">Quiz</string>
    <string name="info">Info</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="list_item_image">list_item_image</string>
    <string name="answer">Answer</string>
    <string name="progress">Progress</string>
    <string name="total_progress">Total Progress.. </string>
    <string name="completion">Completion: </string>
    <string name="days_to_complete">Days to complete: </string>
    <string name="marks">Marks: </string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_text">Choose Text</string>
    <string name="save_url">save url</string>
    <string name="suffix">suffix</string>
    <string name="bottom">bottom</string>
    <string name="arc_text">arc_text</string>
    <string name="page_no">Page:</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <string name="swipe">"Swipe to change"</string>
    <string name="tap">"Tap to show"</string>
    <string name="a">"A"</string>
    <string name="b">"B"</string>
    <string name="c">"C"</string>
    <string name="d">"D"</string>

</resources>
