<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/background_gradient11">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:background="@drawable/background_shape_blue_translucent"
                android:padding="5dp"
                android:textSize="@dimen/font_text" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:background="@drawable/background_shape_blue_translucent"
                android:weightSum="2"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout4"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:weightSum="2" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/background_shape_green" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/a"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/button_transparent_white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/imageView1"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/background_shape_green" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/b"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/button_transparent_white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/imageView2"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout4"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:weightSum="2">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/background_shape_green">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/c"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/button_transparent_white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/imageView3"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/background_shape_green">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/d"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/button_transparent_white" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/imageView4"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:gravity="center"
                android:background="@drawable/background_shape_blue_translucent"
                android:padding="5dp"
                android:weightSum="7"
                android:baselineAligned="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:id="@+id/root1">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="option 1"
                        android:tag="1"
                        android:id="@+id/radioButton5"
                        android:layout_below="@+id/question"
                        android:layout_centerHorizontal="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="option 2"
                        android:tag="2"
                        android:id="@+id/radioButton7" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:id="@+id/root2">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="option 3"
                        android:tag="3"
                        android:id="@+id/radioButton6" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="option 4"
                        android:tag="4"
                        android:id="@+id/radioButton8" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>